Changes for Perl extension Perl-Dist-WiX

0.170   Sat 11 Apr 2009
    1. Tests updated to create common download 
       directory.
    2. Requirement for Perl-Dist updated to current
       svn version. Check it out at:
       http://svn.ali.as/cpan/trunk/Perl-Dist
    3. Updating to Module::Install 0.82
	   
0.169   Thu 09 Apr 2009
    1. With previous distributions where build_number 
       was the only parameter that was different, 
       Product/@Id attribute would be identical.
       This was a bug, and is now corrected.
    2. Some error messages are made clearer, and 
       error messages are documented in the pod for 
       Perl::Dist::WiX.
    3. releaserc not included in distribution.
    4. Additions to main .wxs template to disallow 
       downgrading and correctly detect upgrades.
    5. install_distribution_from_file routine added
       to support Perl::Dist::Bootstrap.
    6. Updating to Module::Install 0.81.
	   
0.162   Fri 27 Mar 2009
    1. Test and documentation update only.  Do not worry 
       about upgrading.

0.161   Thu 26 Mar 2009
    1. Test and documentation update only.  Do not worry 
       about upgrading.

0.160   Sun 22 Mar 2009
    1. install_cpan_upgrades goes through and gets a 
       list of installations to call install_distribution
       on instead of installing all of the distributions
       at once using CPAN::Shell::uptodate.
    2. _run3 removes directories containing unzip.exe 
       and gzip.exe from the path (causes perl's
       'make test' to fail if this is not done).
    3. Checks for spaces in build directory when testing
       perl 5.10.0 (Testing CPANPLUS::Shell will fail)
       and 5.8.8 (Installing modules will fail.)
       Adds Win32 to dependencies, but it was being used
       in testing anyway.
    4. Add TODO list.
    5. Add dependency on Alien::WiX.

0.150   Thu  5 Mar 2009
    1. Added a digit to the version number because 
       having a version numbered 0.1401 messed the 